--- a/app/views/institution/scholarships/new.html.erb
+++ b/app/views/institution/scholarships/new.html.erb
@@ -1,2 +1,1 @@
-<h1>Institution::Scholarships#new</h1>
-<p>Find me in app/views/institution/scholarships/new.html.erb</p>
+<%= render 'institution/scholarships/form', scholarship: @scholarship %>
